# egoplanner_study

./: CMakeLists.txt  RMUA_RUN.md
config/rmua/: all_scoring_frames_ordered.txt  full_scoring_track_early_uturn.csv  rule_based_strict_route_anchors.csv  rule_based_strict_route_full.csv
include/plan_manage/: ego_replan_fsm.h
launch/: rmua_live.rviz  rmua_truth_bridge.launch  run_in_rmua.launch  run_in_rmua_with_rviz.launch
src/: planner_manager.cpp  rmua_bridge.cpp  rmua_poscmd_bridge.cpp  rmua_route_goal_publisher.cpp  rmua_slam_bridge.cpp  rmua_vel_topic_bridge.cpp  traj_server.cpp
src/airsim_ros/: CMakeLists.txt  package.xml
src/airsim_ros/msg/: VelCmd.msg
src/planner/bspline_opt/: CMakeLists.txt
src/planner/path_searching/: CMakeLists.txt
src/planner/plan_env/: CMakeLists.txt
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/launch/: run_in_rmua.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  rmua_bridge.cpp  rmua_route_goal_publisher.cpp
src/planner/traj_utils/: CMakeLists.txt
src/send_fixed_goal/: CMakeLists.txt  package.xml
src/send_fixed_goal/launch/: send_fixed_goal.launch
src/send_fixed_goal/src/: send_fixed_goal_node.cpp
src/uav_simulator/map_generator/: CMakeLists.txt
